# chai-chat

./: .gitignore  README.md  database.db  pyproject.toml
backend/: main.py
backend/auth/: auth.py
backend/routers/: ai.py  ai_router.py  user.py  user_router.py
bot/: main.py
bot/callback_factory/: callback.py  main_callback.py
bot/database/: database.py  models.py
bot/fsm/: horoscope.py
bot/handlers/: start.py
bot/keyboards/: inline.py
bot/service/: ai_req.py
